--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="strefa_wiedzy">Strefa wiedzy</string>
     <string name="zdrowe_nawyki">Zdrowe nawyki</string>
     <string name="o_projekcie">O projekcie</string>
-    <string name="o_nas">Sponsors</string>
+    <string name="o_nas">O nas</string>
     <string name="test_1">TEST 1</string>
     <string name="test_2">TEST 2</string>
     <string name="notification">Notification</string>
@@ -24,5 +24,6 @@
     <string name="szymon_piekutowski">Szymon Piekutowski</string>
     <string name="mateusz_daczkowski">Mateusz Daczkowski</string>
     <string name="you_can_be_here">You can be here!</string>
+    <string name="o_nas_">O nas</string>
 
 </resources>
