--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,7 +142,7 @@
     <string name="zesp">Zespół:</string>
     <string name="_20_dni_do_zdrowej_psychiki">20 dni do zdrowej psychiki</string>
     <string name="narz_dzia">Narzędzia</string>
-    <string name="infolinia">Infolinia</string>
+    <string name="infolinia">Telefon zaufania</string>
     <string name="ca_odobowa_linia_wsparcia">Całodobowa Linia Wsparcia</string>
     <string name="telefon_zaufania_dla_dzieci_i_m_odzie_y">Telefon Zaufania dla Dzieci i Młodzieży</string>
     <string name="telefony_wsprcia_infolinia_jest_bezp_atne_dzwonienie_na_te_numery_jest_pierwsz_rzecz_jak_mo_emy_zrobi_gdy_nasz_stan_si_pogarsza_a_nie_mo_emy_uda_si_do_psychologa">"Telefony wsprcia - infolinia jest bezpłatna. Dzwonienie na te numery jest pierwszą rzeczą jaką możemy zrobić, gdy nasz stan psychiczny się pogarsza, a nie możemy udać się do psychologa. "</string>
@@ -174,6 +174,11 @@
     <string name="quote_18">"Odpoczynek to nieporozumienie dla tych, którzy pracują." - John Lennon</string>
     <string name="quote_19">"Ważne jest, by patrzeć w przyszłość z optymizmem, ale zawsze pamiętaj o lekcjach przeszłości." - Unknown</string>
     <string name="quote_20">"Życie jest jak rower. Aby utrzymać równowagę, musisz się poruszać." - Albert Einstein</string>
+    <string name="clearworries">ClearWorries</string>
+    <string name="ok">OK</string>
+    <string name="worries_info">Każdego dnia zbieramy wiele zmartwień oraz stresujemy się wieloma sytuacjami. Wiele z tych zmartwień to drobnostki, które tylko zaprzątają nam głowę. Wpisz czym się martwisz lub stresujesz, a następnie zapomnij o tym symbolicznie klikając guzik. Uwolnij umysł i skup się na poważnych sprawach!</string>
+    <string name="wpisz_swoje_zmartwienia">Wpisz swoje zmartwienia...</string>
+    <string name="usu_zmartwienia">Usuń zmartwienia!</string>
 
 
 </resources>
