--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,7 +177,7 @@
     <string name="clearworries">ClearWorries</string>
     <string name="ok">OK</string>
     <string name="worries_info">Każdego dnia zbieramy wiele zmartwień oraz stresujemy się wieloma sytuacjami. Wiele z tych zmartwień to drobnostki, które tylko zaprzątają nam głowę. Wpisz czym się martwisz lub stresujesz, a następnie zapomnij o tym symbolicznie klikając guzik. Uwolnij umysł i skup się na poważnych sprawach!</string>
-    <string name="wpisz_swoje_zmartwienia">Wpisz swoje zmartwienia...</string>
+    <string name="wpisz_swoje_zmartwienia">Wpisz swoje zmartwienia…</string>
     <string name="usu_zmartwienia">Usuń zmartwienia!</string>
     <string name="twoje_cytaty">Twoje Cytaty</string>
     <string name="zablokowane">Zablokowane</string>
