1. Fix bugs in UI 2. Add Twitter (X) account to About Project 3. Improve performance in Boxer.kt 4. Add info button to Quotes.kt 5. Now you can share your quotes in other apps like Instagram 6. Change days to fill the form from 20 to 10

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -184,5 +184,10 @@
     <string name="o_projekcie1">About the Project</string>
     <string name="mail">Email</string>
     <string name="strefa_wiedzy1">Knowledge Zone</string>
+    <string name="x">𝕏</string>
+    <string name="facebook">Facebook</string>
+    <string name="instagram">Instagram</string>
+    <string name="info_quotes">Every day you unlock a new quote. You can see the Quote of the Day on the main screen. All the quotes you\'ve already unlocked are available here. Keep using Psychea to unlock more quotes!</string>
+    <string name="share">Share</string>
 
 </resources>
